# clap-file

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: input.rs  lib.rs  output.rs
xtask/: Cargo.toml  README.md
